--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "@reduxjs/toolkit": "^2.2.3",
     "chart.js": "^4.4.2",
     "graphql-request": "^6.1.0",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
